--- a/dashboard/apps/job_manager.fma/css/style.css
+++ b/dashboard/apps/job_manager.fma/css/style.css
@@ -86,6 +86,14 @@ h1, h2, h3, h4, h5, h6 {
    font-weight: bold;
    transition: all 0.5s;
  }
+ 
+ .no-jobs {
+   position: absolute;
+   left: -1000px;
+   top: 0;
+   font-weight: bold;
+   transition: all 0.5s;
+ }
  .now-running{
    position: absolute;
    top: 0;
