--- a/dashboard/apps/job_manager.fma/css/style.css
+++ b/dashboard/apps/job_manager.fma/css/style.css
@@ -705,6 +705,7 @@ table {
     height: 30px;
     border-radius: 5px;
     color: #f2f2f2;
+    cursor: pointer;
     text-transform: normal;
     -o-text-overflow: clip;
     text-overflow: clip;
