--- a/dashboard/apps/app_manager.fma/css/style.css
+++ b/dashboard/apps/app_manager.fma/css/style.css
@@ -3,16 +3,18 @@ body {
 }
 
 .delete-button {
-  background-image: url('../images/ex.png');
   background-size: 100% 100%;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   cursor: pointer;
+  padding: .7em;
+  border: 1px solid #444444;
+  border-radius: 5px;
 }
 
+
 #dropzone { 
-  border: 5px solid transparent;
-  border-radius: 10px;   
+
 }
 
 #dropzone .hovershow {
@@ -24,6 +26,7 @@ body {
 }
 
 #dropzone.hover { 
+  width: 99%;
   border: 5px dashed #ccc; 
   border-radius: 10px;
 }
@@ -57,7 +60,7 @@ body {
   min-width: 50px;
   border-radius: 5px;
   padding: 5px;
-  box-shadow: 3px 3px 3px #aaaaaa;
+  box-shadow: 2px 2px 2px #aaaaaa;
 }
 
 .hidden, .hide { display:none; }
