--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -710,7 +710,21 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	height: 100%;
 	display: none;
 	transition: all 0.5s;
-	
+}
+
+#waiting_container {
+	width: 100%;
+	height: 100%;
+	margin: auto;
+	text-align: center;
+	display: none;
+}
+
+#waiting_container i {
+	position: relative;
+  	top: 50%;
+  	transform: translateY(-50%);
+  	color: #2E3865
 }
 
 #spinner-container {
