css clean up adn DRO consolidation

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -26,22 +26,6 @@ body,html{
  cursor: text;
 }
 
-.on {
-	color: #ffffff;
-}
-
-.off {
-	color: #000000;
-}
-
-.exit-off-canvas {
-	position: fixed !important;
-}
-
-.disabled {
-	color: #9c210c;
-}
-
 .main-section, .app-section, .spinner-section { 
 	height: auto;
 }
@@ -52,21 +36,14 @@ body,html{
 	padding-top: 1.4em;
 }
 
-.page{ height: 100%; }
-
-
 /* ********** Top Bar Settings ********** */
 
 .tab-bar { 
 	background: #313366;
-	z-index: 1000;
+	z-index: 1005;
 	position: fixed;
 	width: 100%;
 	top: 0;
-}
-
-@media only screen and (min-width: 40.063em) {
-	.tab-bar {z-index: 1005;}
 }
 
 .tab-bar a { color : #fff;}
@@ -94,7 +71,7 @@ body,html{
 	max-width: 192px;
 	max-width: 12rem;
 	overflow: hidden;
-	#fff-space: nowrap;
+	white-space: nowrap;
 	text-overflow: ellipsis;
 }
 
@@ -237,6 +214,7 @@ body,html{
 	bottom: 0;
 	z-index: 1002;
 	transition: all 0.5s;
+    overflow: scroll;
 }
 
 
@@ -470,9 +448,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 
 .colapsed #icon_colapse { background-image: url('../img/icon_colapse.png');	}
 
-/***
-*** Right Menu ***
-***/
+/****** Right Menu ******/
 
 #position {
 	background-color: #9c210c;
@@ -488,15 +464,6 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	font-family: 'source_sans_proextralight';
 }
 
-#position ul li:first-child label {
-	font-size: 36px;
-	font-size: 1.5rem;
-	font-family: 'source_sans_proextralight';
-	font-weight: 300;
-	text-transform: capitalize;
-	text-align: center;
-	border-bottom: none;
-}
 
 #position ul .axis > .columns > label {
 	border: none;
@@ -546,10 +513,17 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 .go-here:hover{
 	background-color: #5DAA35;
 }
+/*com*/
+.on {
+	color: #ffffff;
+}
+
+.off {
+	color: #000000;
+}
 
 #position ul .axis .units {
 	font-size: 12px;
-	font-size: 0.75rem;
 	text-transform: lowercase;
 	vertical-align: baseline;
 }
@@ -600,13 +574,26 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 }
 
 #position ul .inOut {
+    margin-top: .3em;
 	font-size: 14px;
 	font-size: 0.875rem;
+}
+
+.inOut:first-child{
+    margin-left: 1em;
+}
+
+.inOutSwitch{
+    margin-left: 2em;
+    height: 20px;
 }
 
 #position ul .inOut .columns {
 	font-size: 13px;
 	font-size: 0.8125rem;
+    padding: 0;
+    margin: 0;
+    font-weight: 900;
 }
 
 #position ul .inOut:not(.hidden) .columns::after{
@@ -616,19 +603,6 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	bottom:0;
 }
 
-#position ul .inOut:(.hidden) .columns::after{
-	border-bottom-color: #eee;
-	right: 15px;
-	right: 0.9375em;
-}
-
-#position ul .switch {
-	padding-left: 15px;
-	padding-left: 0.9375em;
-	padding-right: 15px;
-	padding-right: 0.375em;
-}
-
 #position ul .switch .columns {
 	text-align: left;
 	padding: 0;
@@ -636,6 +610,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	font-size: 0.75rem;
 	font-family: 'source_sans_probold';
 }
+
 
 #job-info ul li:first-child label {
 	background-color: #aaa;
@@ -708,7 +683,6 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 #app-client-container {
 	width: 100%;
 	height: 100%;
-	display: none;
 	transition: all 0.5s;
 }
 
@@ -925,14 +899,12 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
     transition: -ms-transform 1s;
     transition: transform 1s;
     position: absolute;
-    /* rect(<top>, <right>, <bottom>, <left>) */
     clip: rect(0px, 20px, 40px, 0px);
     -webkit-backface-visibility: hidden;
     border-radius: 50%;
 }
 
 .perecent_circle .mask {
-    /* rect(<top>, <right>, <bottom>, <left>) */
       clip: rect(0px,40px,40px,20px);
       height: 40px;
       width: 40px;
@@ -1072,31 +1044,32 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 }
 
 .drive-button.square {
-	width  : 64px;
-	height : 64px;
-	line-height: 64px;
+	width  : 50px;
+	height : 50px;
+	line-height: 45px;
 }
 
 .drive-button.bar {
 	text-align: center;
 	padding: 4px;
-	line-height: 48px;
 	color: white;
 	font-weight: bolder;
-	width  : 216px;
-    position: absolute;
+	width  : 60px;
+    height: 82px;
+    position: relative;
+    right: 10px;
 }
 
 
 .keyboard-button {
 	color: white;
-	line-height: 64px;
+	line-height: 50px;
 	border-radius: 32px;
 	font-weight: bolder;
 	font-size: 24px;
 	text-align: center;
-	width  : 64px;
-	height : 64px;
+	width  : 50px;
+	height : 50px;
 }
 
 .settings-button {
@@ -1135,18 +1108,54 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	padding: 4px;
 }
 
+.button-border{
+    position: relative;
+    width: 36px;
+    height: 30px;
+    right: 39px;
+    border-right: 2px solid #333333;
+}
 .keypad-bar {
-	padding: 4px;
-    height: 60px;
+	 position: absolute;
+     right: 5px;
 }
 
 .keypad-bar.top {
-    margin-bottom: 2em;
-    display: table-row; 
+    top: 4px;
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 50% 100%, 50% 68%, 0 68%, 0 0);
+clip-path: polygon(100% 0, 100% 100%, 50% 100%, 50% 68%, 0 68%, 0 0);
+}
+
+.keypad-bar.top i {
+   position: relative;
+   top: -15px;
+    
+}
+
+.top.button-border{
+    position: absolute;
+    top: 56px;
+    border-top: 2px solid #333333;
+
+}
+
+.bottom.button-border{
+    position: absolute;
+    top: 94px;
+    border-bottom: 2px solid #333333;
+
+}
+
+.keypad-bar.bottom i {
+   position: relative;
+   bottom: -23px;
+    
 }
 
 .keypad-bar.bottom {
-    display: table-row; 
+    top: 93px;
+   -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 35%, 50% 35%, 50% 0);
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 35%, 50% 35%, 50% 0);
 }
 
 #modalDialogButtons {
@@ -1199,9 +1208,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	display: block;
 }
 
-.dro-view {
-	display: none;
-}
+
 
 .dro-view label {
 	font-size: 36px;
@@ -1226,4 +1233,5 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 
 #keypad {
 	margin-left: 4px;
+    position: relative;
 }
