--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -513,7 +513,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 .go-here:hover{
 	background-color: #5DAA35;
 }
-/*com*/
+
 .on {
 	color: #ffffff;
 }
@@ -1046,6 +1046,8 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	width  : 50px;
 	height : 50px;
 	line-height: 45px;
+    position: relative;
+    z-index: 10;
 }
 
 .drive-button.bar {
@@ -1105,6 +1107,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 .keypad-cell {
 	display: table-cell;
 	padding: 4px;
+
 }
 
 .button-border{
@@ -1132,6 +1135,7 @@ clip-path: polygon(100% 0, 100% 100%, 50% 100%, 50% 68%, 0 68%, 0 0);
 }
 
 .top.button-border{
+    background-color: #9C210C;
     position: absolute;
     top: 56px;
     border-top: 2px solid #333333;
@@ -1139,8 +1143,9 @@ clip-path: polygon(100% 0, 100% 100%, 50% 100%, 50% 68%, 0 68%, 0 0);
 }
 
 .bottom.button-border{
+    background-color: #9C210C;
     position: absolute;
-    top: 94px;
+    top: 93px;
     border-bottom: 2px solid #333333;
 
 }
