--- a/dashboard/static/css/fonts.css
+++ b/dashboard/static/css/fonts.css
@@ -92,3 +92,66 @@
     font-style: normal;
 
 }
+
+@font-face {
+  font-family: 'Roboto_Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/roboto-mono-v4-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/roboto-mono-v4-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/roboto-mono-v4-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/roboto-mono-v4-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/roboto-mono-v4-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/roboto-mono-v4-latin-regular.svg#RobotoMono') format('svg'); /* Legacy iOS */
+}
+
+/* anonymous-pro-regular - latin */
+@font-face {
+  font-family: 'Anonymous_Pro';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/anonymous-pro-v8-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/anonymous-pro-v8-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/anonymous-pro-v8-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/anonymous-pro-v8-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/anonymous-pro-v8-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/anonymous-pro-v8-latin-regular.svg#AnonymousPro') format('svg'); /* Legacy iOS */
+}
+
+/* source-code-pro-regular - latin */
+@font-face {
+  font-family: 'Source_Code_Pro';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/source-code-pro-v6-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/source-code-pro-v6-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/source-code-pro-v6-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/source-code-pro-v6-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/source-code-pro-v6-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/source-code-pro-v6-latin-regular.svg#SourceCodePro') format('svg'); /* Legacy iOS */
+}
+
+@font-face {
+  font-family: 'Cousine';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/cousine-v10-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/cousine-v10-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/cousine-v10-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/cousine-v10-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/cousine-v10-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/cousine-v10-latin-regular.svg#Cousine') format('svg'); /* Legacy iOS */
+}
+
+/* droid-sans-mono-regular - latin */
+@font-face {
+  font-family: 'Droid_Sans_Mono';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../fonts/droid-sans-mono-v7-latin-regular.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/droid-sans-mono-v7-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/droid-sans-mono-v7-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/droid-sans-mono-v7-latin-regular.woff') format('woff'), /* Modern Browsers */
+       url('../fonts/droid-sans-mono-v7-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/droid-sans-mono-v7-latin-regular.svg#DroidSansMono') format('svg'); /* Legacy iOS */
+}
