Fix weird ribbon issue

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -684,6 +684,9 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 	height: 100%;
 }
 
+#app-menu-container {
+	visibility: invisible;
+}
 #waiting_container {
 	width: 100%;
 	height: 100%;
