app gost on main screen bug fix

--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -680,7 +680,8 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 #app-client-container {
 	width: 100%;
 	height: 100%;
-    transition: all 0.5s;
+    -webkit-transition: width 0.5s; /* Safari */
+    transition: padding 0.5s;
 }
 
 #waiting_container {
