--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1321,3 +1321,69 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 .chip.three {
     animation: chipflythree .5s .4s ease infinite;
 }
+
+.drobuttonOuter{
+    position: relative;
+    margin-top: 4px;
+    margin-left: 4px;
+    width: 36px;
+    height: 36px;
+    border: 1px solid #FEFEFE;
+    border-radius: 50%;
+
+}
+
+.drobuttonInnerL{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 23px;
+    height: 23px;
+    border: 1px solid #FEFEFE;
+    border-radius: 50%;
+   
+}
+
+.drobuttonInnerS{
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    width: 10px;
+    height: 10px;
+    border: 1px solid #FEFEFE;
+    border-radius: 50%;
+    animation: width 1s ease;
+}
+
+@keyframes pulse {
+    0% {
+        -webkit-box-shadow: 0px 0px 0px 1px #FEFEFE;
+    -moz-box-shadow: 0px 0px 0px 1px #FEFEFE;
+    box-shadow: 0px 0px 0px 1px #FEFEFE;
+    }
+
+    100%{
+         -webkit-box-shadow: 0px 0px 0px 13px #FEFEFE;
+    -moz-box-shadow: 0px 0px 0px 13px #FEFEFE;
+    box-shadow: 0px 0px 0px 13px #FEFEFE;
+    opacity: .2;
+    }
+}
+
+@keyframes width {
+     0% {
+       width: 10px ;
+       height: 10px;
+    }
+
+    50%{
+       width: 36px;
+       height: 36px;
+    }
+    100%{
+       width: 10px;
+       height: 10px;
+    }
+}
