--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -148,6 +148,15 @@ body,html{
 	vertical-align: middle;
 }
 
+#tool-name-container {
+	height: 100%;
+	width: 15rem;
+	position: absolute;
+	color: #eee;
+	left: 3rem;
+	top: 0;
+	vertical-align: middle;
+}
 
 #right-position-container span, #right-position-container label {
 	color: #fff;
