--- a/dashboard/static/css/style.css
+++ b/dashboard/static/css/style.css
@@ -1501,7 +1501,7 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 }
 
 .modalTitle{
-    text-align: left;
+    text-align: center;
      color: #333333;
     padding: 0;
     margin: 0;
@@ -1531,12 +1531,13 @@ ul.off-canvas-list li a, ul.off-canvas-list li.no-link {
 
 
 .modalDialogue{
+    text-align: center;
     font-size: 20px;
      color: #333333;
     display: inline-block;
     margin-right: 1em;
     width: 65%;
-    height: 100%;
+    
     padding: 0;
 }
 
