--- a/dashboard/static/js/templates/app-icon-add.html
+++ b/dashboard/static/js/templates/app-icon-add.html
@@ -1,5 +1,7 @@
 <a href="#">
-	<div class="add">+</div>
+	<div class="add">
+		<span class="add-icon fa fa-plus "></span>
+	</div>
 </a>
 <div class="add-title">
 	Install Apps...
